fix: fix bug about immutable list